Creación script copservir para exportar al layout ISV

--- a/ISV/No B2B/Code/Copservir/Transformation Layout ISV.ipynb
+++ b/ISV/No B2B/Code/Copservir/Transformation Layout ISV.ipynb
@@ -9,22 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "if (!(\"Notification\" in window)) {\n",
-       "    alert(\"This browser does not support desktop notifications, so the %%notify magic will not work.\");\n",
-       "} else if (Notification.permission !== 'granted' && Notification.permission !== 'denied') {\n",
-       "    Notification.requestPermission(function (permission) {\n",
-       "        if(!('permission' in Notification)) {\n",
-       "            Notification.permission = permission;\n",
-       "        }\n",
-       "    })\n",
-       "}\n"
-      ],
+      "application/javascript": "if (!(\"Notification\" in window)) {\n    alert(\"This browser does not support desktop notifications, so the %%notify magic will not work.\");\n} else if (Notification.permission !== 'granted' && Notification.permission !== 'denied') {\n    Notification.requestPermission(function (permission) {\n        if(!('permission' in Notification)) {\n            Notification.permission = permission;\n        }\n    })\n}\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -54,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +55,11 @@
     "path_raw_data = r'C:\\Users\\jshernandezm\\genommalabinternacional\\Cristian Javier Sanchez Yepez - NoB2B\\Copservir\\Copservir Faltante\\{0}\\S {1}\\{0}_{1}.xlsx'\n",
     "path_raw_data = path_raw_data.format(year, str(week).zfill(2))\n",
     "\n",
+    "# La ruta donde están las maestras\n",
+    "path = r'C:\\Users\\jshernandezm\\OneDrive - genommalabinternacional\\02Paises\\COL\\Copservir'\n",
+    "\n",
     "# La ruta donde guardaré el layout No B2B de ISV\n",
-    "path_isv = '../../../../../../../02Paises/Colombia/Copservir/'"
+    "path_original_layout = r'C:\\Users\\jshernandezm\\OneDrive - genommalabinternacional\\COL\\ISV\\No B2B\\Data'"
    ]
   },
   {
@@ -78,26 +71,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 22 s\n"
+      "Wall time: 37.5 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "# Importación de la data semanal correspondiente\n",
-    "df_sem = pd.read_excel(path_raw_data.format(year, str(week).zfill(2)))\n",
+    "df = pd.read_excel(path_raw_data.format(year, str(week).zfill(2)))\n",
     "\n",
     "# Importación de la maestra de locales\n",
-    "#df_pos = pd.read_excel(path_isv + 'Maestra Locales Copservir.xlsx')\n",
+    "df_pos = pd.read_excel(path + '\\\\Maestra Locales Copservir.xlsx')\n",
     "\n",
-    "#df_prices = pd.read_excel(path + 'Maestra Precios Copservir.xlsx')"
+    "# Importación de la maestra de precios y productos\n",
+    "df_prices = pd.read_excel(path + '\\\\Maestra Precios Copservir.xlsx')"
    ]
   },
   {
@@ -109,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,158 +139,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df_sem.pivot_table(\n",
+    "df = df.pivot_table(\n",
     "    index = ['codHoml', 'Código producto'], \n",
     "    values = ['Cantidad Saldo', 'so'], \n",
     "    aggfunc = 'sum'\n",
     ").reset_index()\n",
     "\n",
     "df['Fecha_Venta'] = dday.loc[0, 'SemFin']\n",
-    "df['Cadena'] = 'Copservir'\n",
-    "\n",
-    "df.rename({\n",
-    "    'codHoml':'cod', \n",
-    "    'Código producto':'Cod_Hom',\n",
-    "    'Cantidad Saldo':'Inv',\n",
-    "    'PDV':'cod'}, \n",
-    "    axis=1, inplace=True)"
+    "df['Cadena'] = 'Copservir'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BOG    144\n",
-       "BAR    144\n",
-       "BUC    144\n",
-       "CAL    144\n",
-       "3H5    120\n",
-       "      ... \n",
-       "5M6     52\n",
-       "929     51\n",
-       "5L6     49\n",
-       "947     44\n",
-       "5N1     44\n",
-       "Name: cod, Length: 957, dtype: int64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['cod'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def unique_values(df):\n",
+    "def unique_values(df, column):\n",
     "    data = df.copy()\n",
-    "    vals_duplic = data['cod'].value_counts()[data['cod'].value_counts() > 1].index.tolist()\n",
-    "    data_unique_values = data[~data['cod'].isin(vals_duplic)].copy()\n",
+    "    vals_duplic = data[column].value_counts()[data[column].value_counts() > 1].index.tolist()\n",
+    "    data_unique_values = data[~data[column].isin(vals_duplic)].copy()\n",
     "    for v in vals_duplic:\n",
-    "        data_unique_values = pd.concat([data_unique_values, data[data['cod'] == v][:1]], axis=0)\n",
+    "        data_unique_values = pd.concat([data_unique_values, data[data[column] == v][:1]], axis=0)\n",
     "    data_unique_values.reset_index(drop=True, inplace=True)\n",
     "    return data_unique_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_pos = unique_values(df_pos)"
+    "data_pos = unique_values(df_pos, 'PDV')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cod</th>\n",
-       "      <th>Cod_Hom</th>\n",
-       "      <th>Inv</th>\n",
-       "      <th>so</th>\n",
-       "      <th>Fecha_Venta</th>\n",
-       "      <th>Cadena</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>101</td>\n",
-       "      <td>15706</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2021-07-04</td>\n",
-       "      <td>Copservir</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>101</td>\n",
-       "      <td>27543</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2021-07-04</td>\n",
-       "      <td>Copservir</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   cod  Cod_Hom  Inv   so Fecha_Venta     Cadena\n",
-       "0  101    15706  2.0  0.0  2021-07-04  Copservir\n",
-       "1  101    27543  1.0  0.0  2021-07-04  Copservir"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -305,244 +189,60 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Cruzamos ambas maestras con los datos de SO y Stock\n",
-    "final = pd.merge(pd.merge(df, data_pos, on='cod', how='left'), df_prices, on='Cod_Hom', how='left')\n",
+    "final = pd.merge(df, data_pos, left_on='codHoml', right_on='PDV', how='left')\n",
+    "final = final.merge(df_prices, left_on='Código producto', right_on='Cod_Hom', how='left')\n",
     "df.shape[0] == final.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Agregamos el Monto de las Ventas\n",
-    "final['Costo_SO'] = final['so']*final['Precio']\n",
-    "\n",
-    "# Agregamos el Monto del Stock\n",
-    "final['Costo_Stock'] = final['Inv']*final['Precio']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creamos 2 dfs para guardar los datos necesarios\n",
-    "\n",
-    "SO = final[['Fecha_Venta', 'Cadena', 'Cod_Prod', 'EAN', 'Descripcion', 'cod', 'NOMBRE PDV', 'so', 'Costo_SO']].copy()\n",
-    "\n",
-    "Stock = final[['Fecha_Venta', 'Cadena', 'Cod_Prod', 'EAN', 'Descripcion', 'cod', 'NOMBRE PDV', 'Inv', 'Costo_Stock']].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Fecha_Venta    0\n",
-       "Cadena         0\n",
-       "Cod_Prod       0\n",
-       "EAN            0\n",
-       "Descripcion    0\n",
-       "cod            0\n",
-       "NOMBRE PDV     0\n",
-       "so             0\n",
-       "Costo_SO       0\n",
+       "codHoml            0\n",
+       "Código producto    0\n",
+       "Cantidad Saldo     0\n",
+       "so                 0\n",
+       "Fecha_Venta        0\n",
+       "Cadena             0\n",
+       "PDV                0\n",
+       "NOMBRE PDV         0\n",
+       "Cod_Hom            0\n",
+       "Cod_Prod           0\n",
+       "EAN                0\n",
+       "Descripcion        0\n",
+       "Precio             0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "SO.isnull().sum()"
+    "final.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([], dtype=int64)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "final['Cod_Hom'][final['Cod_Prod'].isnull()].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([], dtype=object)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final['cod'][final['NOMBRE PDV'].isnull()].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cod</th>\n",
-       "      <th>Cod_Hom</th>\n",
-       "      <th>Inv</th>\n",
-       "      <th>so</th>\n",
-       "      <th>Fecha_Venta</th>\n",
-       "      <th>Cadena</th>\n",
-       "      <th>NOMBRE PDV</th>\n",
-       "      <th>Cod_Prod</th>\n",
-       "      <th>EAN</th>\n",
-       "      <th>Descripcion</th>\n",
-       "      <th>Precio</th>\n",
-       "      <th>Unnamed: 5</th>\n",
-       "      <th>Unnamed: 6</th>\n",
-       "      <th>Unnamed: 7</th>\n",
-       "      <th>Unnamed: 8</th>\n",
-       "      <th>Costo_SO</th>\n",
-       "      <th>Costo_Stock</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [cod, Cod_Hom, Inv, so, Fecha_Venta, Cadena, NOMBRE PDV, Cod_Prod, EAN, Descripcion, Precio, Unnamed: 5, Unnamed: 6, Unnamed: 7, Unnamed: 8, Costo_SO, Costo_Stock]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final[final['Cod_Prod'].isnull()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8804.880208328"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SO['so'].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "202763.6999"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Stock['Inv'].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Fecha_Venta    0\n",
-       "Cadena         0\n",
-       "Cod_Prod       0\n",
-       "EAN            0\n",
-       "Descripcion    0\n",
-       "cod            0\n",
-       "NOMBRE PDV     0\n",
-       "Inv            0\n",
-       "Costo_Stock    0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Stock.isnull().sum()"
+    "# Creamos 2 listas de las columnas de Sell Out e Inventario para exportarlos\n",
+    "cols_sellout = ['Fecha_Venta', 'Cadena', 'Código producto', 'EAN', 'Descripcion', 'PDV', 'NOMBRE PDV', 'so']\n",
+    "\n",
+    "cols_stock = ['Fecha_Venta', 'Cadena', 'Código producto', 'EAN', 'Descripcion', 'PDV', 'NOMBRE PDV', 'Cantidad Saldo']"
    ]
   },
   {
@@ -553,8 +253,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def write_layout(filename, df, sellout=True):\n",
     "    writer = pd.ExcelWriter(filename, engine='openpyxl', mode='a')\n",
@@ -568,28 +270,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creando un nuevo folder donde se guardará el archivo ISV No B2B con la información de Copservir"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%notify -m \"¡Exportación lista!\"\n",
-    "%%time\n",
-    "# Creamos un nuevo folder en donde agregamos el layout para exportar a ISV\n",
-    "path_export = '../../../../1Data/2Catalogue/toISV/2021/'\n",
-    "original = path_export + 'Formato No B2B Orig.xlsx'\n",
-    "new_folder = path_export + 'S' + week\n",
-    "try:\n",
-    "    os.mkdir(new_folder)\n",
-    "except:\n",
-    "    pass\n",
+    "new_folder = path_original_layout + '\\\\{0}\\\\{1}'.format(year, str(week).zfill(2))\n",
     "\n",
-    "# Exportamos los datos al layout de ISV\n",
-    "filename = 'Formato No B2B COPSERVIR Sem ' + str(week).zfill(2)\n",
-    "path_export = new_folder + '/' + filename +'.xlsx'\n",
-    "shutil.copy(original, path_export)\n",
-    "write_layout(path_export, SO, True)\n",
-    "write_layout(path_export, Stock, False)"
+    "if not os.path.exists(new_folder):\n",
+    "    os.mkdir(new_folder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creando la ruta de donde se encuentra el layout de ISV y donde vamos a exportar la información"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_original_layout = path_original_layout + '\\\\Formato No B2B.xlsx'\n",
+    "filename = 'Formato No B2B Copservir {1} - {0}.xlsx'.format(year, str(week).zfill(2))\n",
+    "path_export = new_folder + '\\\\' + filename"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exportación tanto de sell out como inventario:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "shutil.copy(path_original_layout, path_export)\n",
+    "write_layout(path_export, final[cols_sellout], True)\n",
+    "write_layout(path_export, final[cols_stock], False)"
    ]
   }
  ],
